fix: fix text-overflow in block about us

--- a/style.css
+++ b/style.css
@@ -571,6 +571,7 @@ template {
   line-height: 1.75em;
   text-align: justify;
   word-spacing: -1px;
+  text-overflow: clip;
 }
 .cell-11 {
   background-image: url(./assets/imgs/pen.png);
@@ -820,11 +821,14 @@ ul {
   top: 33.5px;
 
   display: flex;
-  flex-wrap: row;
+  flex-wrap: wrap;
   justify-content: center;
 }
 .photos__photo {
+  width: 300px;
+  height: 450px;
   padding-right: 20px;
+  overflow: hidden;
 }
 .photo-desmond {
   position: relative;
@@ -851,6 +855,7 @@ ul {
   text-align: left;
   color: #666d89;
   letter-spacing: -0.1px;
+  text-overflow: ellipsis;
 }
 .photo__p {
   width: 300px;
